--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   firebase_core: ^2.3.0
   image_picker: ^0.8.6
   fluttertoast: ^8.1.1
+  cloud_firestore: ^4.5.0
+  firebase_auth: ^4.4.0
+  animated_text_kit: ^4.2.2
   
 
 dev_dependencies:
