--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,12 @@ dependencies:
   cloud_firestore: ^4.5.0
   firebase_auth: ^4.4.0
   animated_text_kit: ^4.2.2
+  google_maps_flutter: ^2.2.5
+  geolocator: ^9.0.2
+  geocoding: ^2.1.0
+  flutter_geocoder: ^0.2.2-nullsafety
+  google_maps_webservice: ^0.0.20-nullsafety.5
+  flutter_polyline_points: ^1.0.0
   
 
 dev_dependencies:
