--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   flutter_geocoder: ^0.2.2-nullsafety
   google_maps_webservice: ^0.0.20-nullsafety.5
   flutter_polyline_points: ^1.0.0
-  
+  flutter_otp_text_field: ^1.1.1
 
 dev_dependencies:
   flutter_test:
